{
    "name": "InputActions",
    "maps": [
        {
            "name": "DrawingControls",
            "id": "4ce52dc5-08e5-49a0-b424-e5929f89798e",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "a65ec9e1-347b-4a86-82df-3e83234276bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftShift",
                    "type": "Button",
                    "id": "278b0f36-d2bf-4f11-8743-77cd65bfe1fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a4b5787-25ed-4468-9c33-61db590b794b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7ae8a9b-75b4-4008-8d2b-f5987e5fa6f3",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}