{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "ba6d39d2-bed4-4de8-93a5-8fb45a467b4d",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "7a7d49a5-c8bc-4a9d-8fa8-1f9a356a0a25",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "efb9e712-ea1c-474c-8b50-b7e357798d97",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchID",
                    "type": "PassThrough",
                    "id": "c26b5f7b-bcb7-4575-b00e-72cf52dadb2a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b79d30d-e490-49ee-af1b-4aee7433d926",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70e54d5f-1a98-4005-95fc-d2a33531e5dd",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1707584-4c1f-4147-93af-beba47c5767c",
                    "path": "<Touchscreen>/primaryTouch/displayIndex",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchID",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}